--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,6 +3,7 @@ version: 0.2
 env:
   variables:
     _PROJECT_NAME: "gateway"
+    _NAMESPACE: "skcc-ns"
 
 phases:
   install:
@@ -34,16 +35,19 @@ phases:
       - echo Pushing the Docker image...
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$_PROJECT_NAME:$CODEBUILD_RESOLVED_SOURCE_VERSION
       - echo connect kubectl
+      - echo create namespace
       - kubectl config set-cluster k8s --server="$KUBE_URL" --insecure-skip-tls-verify=true
       - kubectl config set-credentials admin --token="$KUBE_TOKEN"
       - kubectl config set-context default --cluster=k8s --user=admin
       - kubectl config use-context default
+      - kubectl create ns $_NAMESPACE || true
       - |
           cat <<EOF | kubectl apply -f -
           apiVersion: v1
           kind: Service
           metadata:
             name: $_PROJECT_NAME
+            namespace: $_NAMESPACE
             labels:
               app: $_PROJECT_NAME
           spec:
@@ -60,6 +64,7 @@ phases:
           kind: Deployment
           metadata:
             name: $_PROJECT_NAME
+            namespace: $_NAMESPACE
             labels:
               app: $_PROJECT_NAME
           spec:
