--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,10 @@ spring:
           uri: http://localhost:8084
           predicates:
             - Path= /views/**
+        - id: alarm
+          uri: http://localhost:8085
+          predicates:
+            - Path= /alarms/**
       globalcors:
         corsConfigurations:
           '[/**]':
@@ -59,6 +63,10 @@ spring:
           uri: http://MyPage:8080
           predicates:
             - Path= /views/**
+        - id: alarm
+          uri: http://alarm:8080
+          predicates:
+            - Path= /alarms/**
       globalcors:
         corsConfigurations:
           '[/**]':
