--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 
 env:
   variables:
-    _PROJECT_NAME: "gateway"
+    _PROJECT_NAME: "user09-gateway"
     _NAMESPACE: "skcc-ns"
     _AWS_REGION: "ap-northeast-2"
 
