--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 
 env:
   variables:
-    _PROJECT_NAME: "user09-gateway"
+    _PROJECT_NAME: "gateway"
     _NAMESPACE: "skcc-ns"
     _AWS_REGION: "ap-northeast-2"
 
@@ -30,11 +30,11 @@ phases:
       - echo Build started on `date`
       - echo Building the Docker image...
       - mvn package -Dmaven.test.skip=true
-      - docker build -t $AWS_ACCOUNT_ID.dkr.ecr.$_AWS_REGION.amazonaws.com/$_PROJECT_NAME:$CODEBUILD_RESOLVED_SOURCE_VERSION  .
+      - docker build -t $AWS_ACCOUNT_ID.dkr.ecr.$_AWS_REGION.amazonaws.com/user09-gateway:$CODEBUILD_RESOLVED_SOURCE_VERSION  .
   post_build:
     commands:
       - echo Pushing the Docker image...
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$_AWS_REGION.amazonaws.com/$_PROJECT_NAME:$CODEBUILD_RESOLVED_SOURCE_VERSION
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$_AWS_REGION.amazonaws.com/user09-gateway:$CODEBUILD_RESOLVED_SOURCE_VERSION
       - echo connect kubectl
       - echo create namespace
       - kubectl config set-cluster k8s --server="$KUBE_URL" --insecure-skip-tls-verify=true
@@ -80,7 +80,7 @@ phases:
               spec:
                 containers:
                   - name: $_PROJECT_NAME
-                    image: $AWS_ACCOUNT_ID.dkr.ecr.$_AWS_REGION.amazonaws.com/$_PROJECT_NAME:$CODEBUILD_RESOLVED_SOURCE_VERSION
+                    image: $AWS_ACCOUNT_ID.dkr.ecr.$_AWS_REGION.amazonaws.com/user09-gateway:$CODEBUILD_RESOLVED_SOURCE_VERSION
                     ports:
                       - containerPort: 8080
           EOF
