--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -64,7 +64,7 @@ spring:
           uri: http://MyPage:8080
           predicates:
             - Path= /views/**
-        - id: smartdata
+        - id: SmartData
           uri: http://smartdata:8080
           predicates:
             - Path= /SmartData/**
